# CodingChallenges

./: README.md  pyproject.toml  run.py
tasks/1/: main.py
tasks/15/: main.py
tasks/18/: main.py
tasks/19/: main.py
tasks/2/: main.py
tasks/2/results/: AA11 123.txt
tasks/20/: main.py
tasks/24/: main.py
tasks/3/: main.py
tasks/30/: main.py
tasks/38/: main.py
tasks/48/: main.py
tasks/5/: main.py
tasks/61/: main.py
tasks/62/: main.py
tasks/69/: main.py
